<resources>
    <string name="app_name">Social Promo App</string>
    <string name="title_activity_feed">Social Promo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_deslogar">Deslogar</string>
    <string name="action_sair">Sair</string>
    <string name="action_cadastrar_usuario">Cadastrar Usuário</string>
    <string name="action_cadastrar_postagem">Cadastrar Postagem</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_perfil">Meu Perfil</string>
    <string name="menu_minhas_publicacoes">Minhas Publicações</string>
    <string name="menu_filtrar">Filtrar</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_deslogar">Deslogar</string>

</resources>