<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_minhas_publicacoes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_minhas_publicacoes" />
        <item
            android:id="@+id/nav_fitrar"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_filtrar" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_sair" />
    </group>
</menu>