<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_feed">


    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.socialpromoapp.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.socialpromoapp.ui.cadastro.CadastroFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_cadastro" />

    <fragment
        android:id="@+id/nav_postagem"
        android:name="com.example.socialpromoapp.ui.postagem.PostagemFragment"
        android:label="@string/action_cadastrar"
        tools:layout="@layout/fragment_postagem" />
    <fragment
        android:id="@+id/nav_deslogar"
        android:name="com.example.socialpromoapp.ui.deslogar.DeslogarFragment"
        android:label="@string/menu_deslogar"
        tools:layout="@layout/fragment_deslogar" />
</navigation>